<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="timepicker_year">年</string>
    <string name="timepicker_month">月</string>
    <string name="timepicker_day">日</string>
    <string name="timepicker_hour">时</string>
    <string name="timepicker_min">分</string>
    <string name="timepicker_title">设置时间</string>
    <string name="time_date_picker_title">设置日期</string>
    <string name="timepicker_finish">确认</string>
    <string name="timepicker_cancel">取消</string>
    <string name="timepicker_title_default">设置</string>

</resources>